# FocusLock

./: .gitignore  README.md  ROADMAP.md  focuslock.db  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  test.yml
backend/: __init__.py  classifier.py  dataset_generator.py  engine.py  learning_manager.py  logger.py  monitor.py  store.py  train_model.py  user_profile.py  window_utils.py
backend/core/: context_builder.py  engine.py  monitor.py  store.py  tab_url_scraper.py  window_utils.py
backend/data/: training_data.csv  user_profile.json
backend/data/logs/: activity_log_2026-04-08.jsonl
backend/ml/: classifier.py  intent_engine.py  learning_manager.py  train_model.py
backend/utils/: backup.py  logger.py  user_profile.py
data/backups/backup_20260707T161012Z/: focus_model.pkl
data/backups/backup_20260707T162648Z/: focus_model.pkl
data/backups/backup_20260707T164950Z/: focus_model.pkl
focuslock_app/: pubspec.yaml
focuslock_app/android/app/src/main/: AndroidManifest.xml
focuslock_app/lib/: active_session.dart  api_service.dart  connection_config_screen.dart  dashboard_screen.dart  insights_screen.dart  main.dart  profile_screen.dart  providers.dart  setup_session.dart  ui_components.dart
focuslock_app/test/: widget_test.dart
scripts/: LogToDataSetconv.py  dataset_generator.py  verify.py
static/js/: client.js
templates/: analytics.html  index.html
tests/: test_classifier.py  test_fsm.py  test_intent_engine.py  test_thread_regression.py  test_window_utils.py
